# coinclock

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/hub_display/: CMakeLists.txt  hub_display.c  hub_display.h  icons.h  u8g2_esp32_hal.c  u8g2_esp32_hal.h
components/hub_gpio/: CMakeLists.txt  component.mk  hub_gpio.c  hub_gpio.h
components/hub_wifi/: CMakeLists.txt  component.mk  dns_server.c  dns_server.h  hub_dns.c  hub_dns.h  hub_wifi.c  hub_wifi.h  nvs_sync.c  nvs_sync.h  scan.c
components/hub_wifi/wifi_login/: index.html  login.css
components/spiffs/: CMakeLists.txt  list.c  list.h  spiffs_vfs.c
components/swing_nvs/: CMakeLists.txt  swing_nvs_app.c  swing_nvs_app.h
components/u8g2/: CMakeLists.txt  u8g2.h
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  main.c  task_handler.c  task_handler.h
main/include/: task_handler.h
